<resources>
    <string name="app_name">TripApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings Page</string>
    <string name="title_activity_trip_information">Trip Information Page</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_log">Log Activity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="logHead">Trip Log</string>
    <string name="tripTitle"> Title </string>
    <string name="titleEnter">Enter a title</string>
    <string name="cancel">Cancel</string>
    <string name="tripHead">Trip Information</string>
    <string name="settingsText">User Settings</string>
    <string name="destinationEnter">Enter the destination</string>
    <string name="date">Date</string>
    <string name="dateEnter">Enter date</string>
    <string name="typeText">Type</string>
    <string name="destinationText">Destination</string>
    <string name="durationEnter">Duration</string>
    <string name="commentText">Add Comment</string>
    <string name="photoText">Photo</string>
    <string name="photoBtnText">Take Picture</string>
    <string name="submit">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="durationEdit">Enter duration</string>
    <string name="commentEnter">Enter comments</string>
    <string name="tripInfoHead">Trip Information</string>
    <string name="getGPSLoc">Location</string>
    <string name="name">Name</string>
    <string name="nameEnter">Enter your name</string>
    <string name="id">ID</string>
    <string name="IDEnter">Enter your ID</string>
    <string name="gender">Gender</string>
    <string name="maleText">Male</string>
    <string name="femaleText">Female</string>
    <string name="emailText">Email</string>
    <string name="emailEnter">Enter your Email</string>
    <string name="Save">Submit</string>
    <string name="currentLocation">Current Location</string>
    <string-array name="tripType">

        <item>  Work</item>
        <item>Personal</item>
        <item>Commute</item>

    </string-array>
    <string name="title_activity_maps">Map</string>


</resources>
