<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameEnter"
            android:background="@drawable/roundborder"
            android:textColor="@color/black"
            android:layout_toEndOf="@+id/nameText"
            android:layout_toRightOf="@+id/nameText"
            android:layout_alignLeft="@+id/comment"
            android:layout_alignStart="@+id/comment"
            android:layout_alignBottom="@+id/nameText"
            android:layout_marginEnd="@dimen/heading_margin_end"
            android:layout_marginRight="@dimen/heading_margin_end"
            android:padding="@dimen/heading_padding"
            />

        <TextView

            android:id="@+id/IDText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Student ID"
            android:textStyle="bold"
            android:textSize="@dimen/heading_label_text_size"
            android:textColor="@color/black"

            android:layout_alignLeft="@+id/nameText"
            android:layout_alignStart="@+id/nameText"
            android:layout_below="@+id/nameText"
            android:layout_marginTop="@dimen/heading_margin"
            android:padding="@dimen/heading_padding"

            />

        <EditText
            android:id="@+id/UserIDSetting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/IDEnter"
            android:background="@drawable/roundborder"
            android:textColor="@color/black"
            android:layout_alignTop="@+id/IDText"
            android:layout_alignBottom="@+id/IDText"
            android:layout_alignLeft="@+id/comment"
            android:layout_alignStart="@+id/comment"
            android:layout_toEndOf="@+id/IDText"
            android:layout_toRightOf="@+id/IDText"
            android:layout_marginEnd="@dimen/heading_margin_end"
            android:layout_marginRight="@dimen/heading_margin_end"
            android:padding="@dimen/heading_padding"
            />

        <TextView

            android:id="@+id/genderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/heading_label_text_size"
            android:layout_alignLeft="@+id/IDText"
            android:layout_alignStart="@+id/IDText"
            android:layout_below="@+id/IDText"
            android:layout_marginTop="@dimen/heading_margin"
            android:padding="@dimen/heading_padding"
            />

        <RadioGroup
            android:id="@+id/radioGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/UserIDSetting"
            android:layout_alignBottom="@+id/genderText"
            android:layout_alignLeft="@+id/comment"
            android:layout_alignStart="@+id/comment"
            android:layout_toEndOf="@+id/genderText"
            android:layout_toRightOf="@+id/genderText"
            android:layout_marginTop="@dimen/heading_margin"
            android:padding="@dimen/heading_padding"
            >
            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maleText"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/femaleText" />
        </RadioGroup>

        <TextView

            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailText"
            android:textSize="@dimen/heading_label_text_size"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_alignLeft="@+id/genderText"
            android:layout_alignStart="@+id/genderText"
            android:layout_below="@+id/radioGender"
            android:layout_marginTop="@dimen/heading_margin"
            android:padding="@dimen/heading_padding"/>


        <EditText
            android:id="@+id/emailID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:hint="@string/emailEnter"
            android:background="@drawable/roundborder"
            android:textColor="@color/black"
            android:layout_alignTop="@+id/emailText"
            android:layout_alignBottom="@+id/emailText"
            android:layout_alignLeft="@+id/comment"
            android:layout_alignStart="@+id/comment"
            android:layout_toEndOf="@+id/emailText"
            android:layout_toRightOf="@+id/emailText"
            android:layout_marginEnd="@dimen/heading_margin_end"
            android:layout_marginRight="@dimen/heading_margin_end"
            android:padding="@dimen/heading_padding"
            />

        <TextView
            android:id="@+id/commentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commentText"
            android:textStyle="bold"
            android:textSize="@dimen/heading_label_text_size"
            android:textColor="@color/black"


            android:layout_alignLeft="@+id/emailText"
            android:layout_alignStart="@+id/emailText"
            android:layout_below="@+id/emailID"
            android:padding="@dimen/heading_padding"
            android:layout_marginTop="@dimen/heading_margin"
            />

        <EditText
            android:id="@+id/comment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dateEnter"
            android:background="@drawable/roundborder"
            android:textColor="@color/black"
            android:layout_alignTop="@+id/commentText"
            android:layout_alignBottom="@+id/commentText"

            android:layout_toEndOf="@+id/commentText"
            android:layout_toRightOf="@+id/commentText"
            android:layout_marginEnd="@dimen/heading_margin_end"
            android:layout_marginRight="@dimen/heading_margin_end"
            android:padding="@dimen/heading_padding"
            />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/heading_label_text_size"
            android:textStyle="bold"
            android:layout_marginTop="19dp"
            android:padding="@dimen/heading_padding"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>


</ScrollView>







