    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/white"
        tools:context="com.ict311.task2.tripapplication.LogActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            >

            <TextView
                android:id="@+id/gpsLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/heading_label_text_size"
                android:layout_marginTop="@dimen/heading_margin"
                android:text= "Current GPS Location"

                />
            <TextView
                android:id="@+id/titleText"
                android:layout_below="@+id/gpsLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tripTitle"
                android:textColor="@color/black"
                android:textSize="@dimen/heading_label_text_size"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/heading_margin"
                android:padding="@dimen/heading_padding"
                />

            <EditText
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titleEnter"
                android:background="@drawable/roundborder"
                android:textSize="@dimen/heading_label_text_size"
                android:textColor="@color/black"
                android:layout_alignLeft="@+id/destination"
                android:layout_alignStart="@+id/destination"
                android:layout_toEndOf="@+id/titleText"
                android:layout_toRightOf="@+id/titleText"
                android:layout_alignBottom="@+id/titleText"
                android:layout_marginEnd="@dimen/heading_margin_end"
                android:layout_marginRight="@dimen/heading_margin_end"
                 android:padding="@dimen/heading_padding"
                />

            <TextView

                android:id="@+id/typeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/typeText"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/heading_label_text_size"
                android:layout_alignLeft="@+id/titleText"
                android:layout_alignStart="@+id/titleText"
                android:layout_below="@+id/titleText"
                android:padding="@dimen/heading_padding"
                android:layout_marginTop="@dimen/heading_margin"
                />
            <Spinner
                android:id="@+id/type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/roundborder"
                android:textColor="@color/black"
                android:layout_alignTop="@+id/typeText"
                android:layout_alignBottom="@+id/typeText"
                android:layout_alignLeft="@+id/destination"
                android:layout_alignStart="@+id/destination"
                android:layout_toEndOf="@+id/typeText"
                android:layout_toRightOf="@+id/typeText"
                android:layout_marginEnd="@dimen/heading_margin_end"
                android:layout_marginRight="@dimen/heading_margin_end"
                android:padding="@dimen/heading_padding"
                />


            <TextView

                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textStyle="bold"
                android:textSize="@dimen/heading_label_text_size"
                android:textColor="@color/black"
                android:layout_alignLeft="@+id/typeText"
                android:layout_alignStart="@+id/typeText"
                android:layout_below="@+id/typeText"
                android:layout_marginTop="@dimen/heading_margin"
                android:padding="@dimen/heading_padding"

                />

            <EditText
                android:id="@+id/date"
                android:textSize="@dimen/heading_label_text_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dateEnter"
                android:background="@drawable/roundborder"
                android:textColor="@color/black"
                android:layout_alignTop="@+id/dateText"
                android:layout_alignBottom="@+id/dateText"
                android:layout_alignLeft="@+id/destination"
                android:layout_alignStart="@+id/destination"
                android:layout_toEndOf="@+id/dateText"
                android:layout_toRightOf="@+id/dateText"
                android:layout_marginEnd="@dimen/heading_margin_end"
                android:layout_marginRight="@dimen/heading_margin_end"
                android:padding="@dimen/heading_padding"
                />




            <TextView
                android:id="@+id/durationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/durationEnter"
                android:textStyle="bold"
                android:textSize="@dimen/heading_label_text_size"
                android:textColor="@color/black"
                android:layout_alignLeft="@+id/dateText"
                android:layout_alignStart="@+id/dateText"
                android:layout_below="@+id/date"
                android:layout_marginTop="@dimen/heading_margin"
                android:padding="@dimen/heading_padding"
                />

            <EditText
                android:id="@+id/duration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/durationEdit"
                android:textSize="@dimen/heading_label_text_size"
                android:background="@drawable/roundborder"
                android:textColor="@color/black"
                android:layout_alignTop="@+id/durationText"
                android:layout_alignBottom="@+id/durationText"
                android:layout_alignLeft="@+id/destination"
                android:layout_alignStart="@+id/destination"
                android:layout_toEndOf="@+id/durationText"
                android:layout_toRightOf="@+id/durationText"
                android:layout_marginEnd="@dimen/heading_margin_end"
                android:layout_marginRight="@dimen/heading_margin_end"
                android:padding="@dimen/heading_padding"
                />


            <TextView

                android:id="@+id/destinationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destinationText"
                android:textSize="@dimen/heading_label_text_size"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_alignLeft="@+id/durationText"
                android:layout_alignStart="@+id/durationText"
                android:layout_below="@+id/duration"
                android:layout_marginTop="@dimen/heading_margin"
                android:padding="@dimen/heading_padding"/>
            <EditText
                android:id="@+id/destination"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/destinationEnter"
                android:background="@drawable/roundborder"
                android:textColor="@color/black"
                android:textSize="@dimen/heading_label_text_size"
                android:layout_alignTop="@+id/destinationText"
                android:layout_alignBottom="@+id/destinationText"

                android:layout_toEndOf="@+id/destinationText"
                android:layout_toRightOf="@+id/destinationText"
                android:layout_marginEnd="@dimen/heading_margin_end"
                android:layout_marginRight="@dimen/heading_margin_end"
                android:padding="@dimen/heading_padding"
                />




            <TextView
                android:id="@+id/commentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commentText"
                android:textStyle="bold"
                android:textSize="@dimen/heading_label_text_size"
                android:textColor="@color/black"
                android:layout_alignLeft="@+id/destinationText"
                android:layout_alignStart="@+id/destinationText"
                android:layout_below="@+id/destination"
                android:layout_marginTop="@dimen/heading_margin"
                android:padding="@dimen/heading_padding"
                />

            <EditText
                android:textSize="@dimen/heading_label_text_size"
                android:id="@+id/comment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/commentEnter"
                android:background="@drawable/roundborder"
                android:textColor="@color/black"
                android:layout_alignTop="@+id/commentText"
                android:layout_alignBottom="@+id/commentText"
                android:layout_alignLeft="@+id/destination"
                android:layout_alignStart="@+id/destination"
                android:layout_toEndOf="@+id/commentText"
                android:layout_toRightOf="@+id/commentText"
                android:layout_marginEnd="@dimen/heading_margin_end"
                android:layout_marginRight="@dimen/heading_margin_end"
                android:padding="@dimen/heading_padding"
                />
            <TextView
                android:id="@+id/photoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photoText"
                android:textStyle="bold"
                android:textSize="@dimen/heading_label_text_size"
                android:textColor="@color/black"
                android:layout_alignLeft="@+id/destinationText"
                android:layout_alignStart="@+id/destinationText"
                android:layout_below="@+id/comment"
                android:layout_marginTop="@dimen/heading_margin"
                android:padding="@dimen/heading_padding"
                />

            <ImageView
                android:id="@+id/photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:hint="@string/dateEnter"
                android:background="@drawable/roundborder"
                android:layout_alignTop="@+id/photoText"
                android:layout_alignLeft="@+id/destination"
                android:layout_alignStart="@+id/destination"
                android:layout_toEndOf="@+id/photoText"
                android:layout_toRightOf="@+id/photoText"
                android:layout_marginEnd="@dimen/heading_margin_end"
                android:layout_marginRight="@dimen/heading_margin_end"

                android:padding="@dimen/heading_padding"
                />
            <Button
                android:id="@+id/photoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:text="@string/photoBtnText"
                android:layout_below="@+id/photo"
android:layout_toLeftOf="@+id/submit"
                android:layout_toStartOf="@+id/submit"
                android:layout_marginLeft="@dimen/heading_button_margin_left"
                android:layout_marginStart="@dimen/heading_button_margin_left"
                android:layout_marginTop="@dimen/heading_button_margin_top"
                android:padding="@dimen/heading_padding"
                />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:text="@string/submit"
                android:layout_below="@+id/photo"
               android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/heading_button_margin_left"
                android:layout_marginStart="@dimen/heading_button_margin_left"
                android:layout_marginTop="@dimen/heading_button_margin_top"
                android:padding="@dimen/heading_padding"
                />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:text="@string/cancel"
                android:layout_below="@+id/photo"
                android:layout_toRightOf="@+id/submit"
                android:layout_toEndOf="@+id/submit"
                android:layout_marginLeft="@dimen/heading_button_margin_left"
                android:layout_marginStart="@dimen/heading_button_margin_left"
                android:layout_marginTop="@dimen/heading_button_margin_top"
                android:padding="@dimen/heading_padding"
                />

        </RelativeLayout>


    </ScrollView>








